--- a/src/Mod/Draft/CMakeLists.txt
+++ b/src/Mod/Draft/CMakeLists.txt
@@ -1,7 +1,6 @@
 PYSIDE_WRAP_RC(Draft_QRC_SRCS Resources/Draft.qrc)
 
 SET(Draft_SRCS
-    ${Draft_QRC_SRCS}
     Init.py
     InitGui.py
     Draft.py
@@ -21,17 +20,21 @@ SET(Draft_SRCS
 )
 SOURCE_GROUP("" FILES ${Draft_SRCS})
 
-SET(all_files ${Draft_SRCS})
-
 ADD_CUSTOM_TARGET(Draft ALL
-    SOURCES ${all_files}
+    SOURCES ${Draft_SRCS} ${Draft_QRC_SRCS}
 )
 
-fc_copy_sources(Draft "${CMAKE_BINARY_DIR}/Mod/Draft" ${all_files})
+fc_copy_sources(Draft "${CMAKE_BINARY_DIR}/Mod/Draft" ${Draft_SRCS})
+
+fc_target_copy_resource(Draft
+    ${CMAKE_CURRENT_BINARY_DIR}
+    ${CMAKE_BINARY_DIR}/Mod/Draft
+    Draft_rc.py)
 
 INSTALL(
     FILES
         ${Draft_SRCS}
+        ${Draft_QRC_SRCS}
     DESTINATION
         Mod/Draft
 )
