--- a/src/Base/CMakeLists.txt
+++ b/src/Base/CMakeLists.txt
@@ -22,7 +22,7 @@ if(MSVC)
         ${Boost_LIBRARIES}
         ${Boost_DEBUG_LIBRARIES}
         debug ${PYTHON_DEBUG_LIBRARY}
-        ${PYTHON_LIBRARY}
+        optimized ${PYTHON_LIBRARY}
         debug ${XERCESC_DEBUG_LIBRARIES}
         optimized ${XERCESC_LIBRARIES}
         ${QT_QTCORE_LIBRARY}
