+ support of merging projects on App level

--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -77,7 +77,8 @@ SET(Document_CPP_SRCS
     Plane.cpp
     Transactions.cpp
     VRMLObject.cpp
-	MaterialObject.cpp
+    MaterialObject.cpp
+    MergeDocuments.cpp
 )
 
 SET(Document_HPP_SRCS
@@ -99,7 +100,8 @@ SET(Document_HPP_SRCS
     Plane.h
     Transactions.h
     VRMLObject.h
-	MaterialObject.h
+    MaterialObject.h
+    MergeDocuments.h
 )
 SET(Document_SRCS
     ${Document_CPP_SRCS}
