Fixed the module copy path

--- a/src/Mod/Ship/CMakeLists.txt
+++ b/src/Mod/Ship/CMakeLists.txt
@@ -94,7 +94,7 @@ ADD_CUSTOM_TARGET(Ship ALL
     SOURCES ${all_files}
 )
 
-fc_copy_sources(Mod/Ship "${CMAKE_BINARY_DIR}/Mod/Ship" ${all_files})
+fc_copy_sources(Ship "${CMAKE_BINARY_DIR}/Mod/Ship" ${all_files})
 
 INSTALL(
     FILES
