--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,7 @@ OPTION(BUILD_FEM "Build the FreeCAD FEM module, be aware, unfinished code!" ON)
 OPTION(BUILD_SANDBOX "Build the FreeCAD Sandbox module which is only for testing purposes" OFF)
 OPTION(BUILD_TEMPLATE "Build the FreeCAD template module which is only for testing purposes" OFF)
 OPTION(BUILD_ARCH "Build the FreeCAD Architecture module" ON)
-OPTION(BUILD_ASSEMBLY "Build the FreeCAD Assembly module" ON)
+OPTION(BUILD_ASSEMBLY "Build the FreeCAD Assembly module" OFF)
 OPTION(BUILD_COMPLETE "Build the FreeCAD complete module" ON)
 OPTION(BUILD_DRAFT "Build the FreeCAD draft module" ON)
 OPTION(BUILD_DRAWING "Build the FreeCAD drawing module" ON)
