--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,11 +126,21 @@ if(APPLE)
 
     if(FREECAD_CREATE_MAC_APP)
         install(
-            DIRECTORY ${CMAKE_SOURCE_DIR}/src/MacAppBundle/FreeCAD.app
-            DESTINATION ${CMAKE_INSTALL_PREFIX}
+            DIRECTORY ${CMAKE_SOURCE_DIR}/src/MacAppBundle/FreeCAD.app/
+            DESTINATION ${CMAKE_INSTALL_PREFIX}/${PACKAGE_NAME}.app
         )
-        set(CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/FreeCAD.app/Contents)
-        SET(CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
+
+        # It should be safe to assume we've got sed on OSX...
+        install(CODE "
+            execute_process(COMMAND
+                sed -i \"\" -e s/VERSION_STRING_FROM_CMAKE/${PACKAGE_VERSION}/
+                -e s/NAME_STRING_FROM_CMAKE/${PACKAGE_NAME}/
+                ${CMAKE_INSTALL_PREFIX}/${PACKAGE_NAME}.app/Contents/Info.plist)
+               ")
+
+        set(CMAKE_INSTALL_PREFIX
+            ${CMAKE_INSTALL_PREFIX}/${PACKAGE_NAME}.app/Contents)
+        set(CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
     endif(FREECAD_CREATE_MAC_APP)
 endif(APPLE)
 
@@ -419,9 +429,122 @@ if(NOT FREECAD_LIBPACK_USE OR FREECAD_LIBPACK_CHECKFILE_CLBUNDLER)
 
 # -------------------------------- Python --------------------------------
 
+#http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=677598
+# Acceptable versions of Python
+set(Python_ADDITIONAL_VERSIONS "2.3" "2.4" "2.5" "2.6" "2.7" "2.8" "2.9")
 
-    #http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=677598
-    set(Python_ADDITIONAL_VERSIONS "2.3" "2.4" "2.5" "2.6" "2.7" "2.8" "2.9")
+# For building on OS X
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+    # If the user doesn't tell us which package manager they're using
+    if(NOT DEFINED MACPORTS_PREFIX AND NOT DEFINED HOMEBREW_PREFIX)
+
+        # Try to find MacPorts path
+        find_program(MACPORTS_EXECUTABLE port)
+        if(EXISTS ${MACPORTS_EXECUTABLE})
+            string(REPLACE "/bin/port" ""
+                   MACPORTS_PREFIX ${MACPORTS_EXECUTABLE})
+            message(STATUS "Detected MacPorts install at ${MACPORTS_PREFIX}")
+        endif(EXISTS ${MACPORTS_EXECUTABLE})
+
+        # Try to find Homebrew path
+        find_program(HOMEBREW_EXECUTABLE brew)
+        if(EXISTS ${HOMEBREW_EXECUTABLE})
+            set(HOMEBREW_PREFIX "/usr/local")
+            message(STATUS "Detected Homebrew install at ${HOMEBREW_PREFIX}")
+        endif()
+
+    endif(NOT DEFINED MACPORTS_PREFIX AND NOT DEFINED HOMEBREW_PREFIX)
+
+    # In case someone tries to shoot themselves in the foot
+    if(DEFINED MACPORTS_PREFIX AND DEFINED HOMEBREW_PREFIX)
+        message(SEND_ERROR
+                "Multiple package management systems detected - ")
+        message(SEND_ERROR
+                "define either MACPORTS_PREFIX or HOMEBREW_PREFIX")
+
+    # No package manager
+    elseif(NOT DEFINED MACPORTS_PREFIX AND NOT DEFINED HOMEBREW_PREFIX)
+        message(SEND_ERROR
+                "No package manager detected - install MacPorts or Homebrew")
+
+    # The hopefully-normal case - one package manager identified
+    else(DEFINED MACPORTS_PREFIX AND DEFINED HOMEBREW_PREFIX)
+
+        # Construct a list like python;python2.9;python2.8;...
+        set(Python_ADDITIONAL_VERSIONS_REV ${Python_ADDITIONAL_VERSIONS})
+        list(REVERSE Python_ADDITIONAL_VERSIONS_REV)
+        set(_PYTHON_NAMES "python")
+        foreach(_PYTHON_VERSION IN LISTS Python_ADDITIONAL_VERSIONS_REV)
+            list(APPEND _PYTHON_NAMES "python${_PYTHON_VERSION}")
+        endforeach(_PYTHON_VERSION)
+
+        # Find python in the package management systems, using names in that
+        # list in decreasing priority.  Note that a manually specified
+        # PYTHON_EXECUTABLE still has prescedence over this.
+        find_program(PYTHON_EXECUTABLE
+                     NAMES ${_PYTHON_NAMES}
+                     PATHS ${MACPORTS_PREFIX} ${HOMEBREW_PREFIX}
+                     PATH_SUFFIXES /bin
+                     NO_DEFAULT_PATH)
+
+    endif(DEFINED MACPORTS_PREFIX AND DEFINED HOMEBREW_PREFIX)
+
+    # Warn user if we still only have the system Python
+    string(FIND ${PYTHON_EXECUTABLE} "/usr/bin/python" _FIND_SYS_PYTHON)
+    if(_FIND_SYS_PYTHON EQUAL 0)
+        message(SEND_ERROR
+                "Only found the stock Python, that's probably bad.")
+    endif(_FIND_SYS_PYTHON EQUAL 0)
+
+    # Ask Python to tell us it's include directory, if nobody else has
+    if(NOT DEFINED PYTHON_INCLUDE_DIR)
+        execute_process(COMMAND ${PYTHON_EXECUTABLE} -c
+         "from distutils.sysconfig import get_python_inc;print get_python_inc()"
+                        OUTPUT_VARIABLE PYTHON_INCLUDE_DIR
+                        RESULT_VARIABLE PYTHON_INCLUDE_DIR_RESULT
+                        ERROR_QUIET)
+        if(NOT PYTHON_INCLUDE_DIR_RESULT MATCHES 0)
+            message(SEND_ERROR "Failed to determine PYTHON_INCLUDE_DIR")
+        endif(NOT PYTHON_INCLUDE_DIR_RESULT MATCHES 0)
+    endif(NOT DEFINED PYTHON_INCLUDE_DIR)
+
+    # Similar for the Python library - there must be an easier way...
+    if(NOT DEFINED PYTHON_LIBRARY)
+        # Get the library path
+        execute_process(COMMAND "${PYTHON_EXECUTABLE}" -c
+      "from distutils import sysconfig;print sysconfig.get_config_var('LIBDIR')"
+                        OUTPUT_VARIABLE PYTHON_LIBRARY_DIR
+                        RESULT_VARIABLE PYTHON_LIBRARY_DIR_RESULT
+                        ERROR_QUIET)
+        string(STRIP ${PYTHON_LIBRARY_DIR} PYTHON_LIBRARY_DIR)
+        if(NOT PYTHON_LIBRARY_DIR_RESULT MATCHES 0)
+            message(SEND_ERROR "Failed to determine PYTHON_LIBRARY")
+        endif(NOT PYTHON_LIBRARY_DIR_RESULT MATCHES 0)
+
+        # Get library filename - might not be safe to assume .dylib extension?
+        execute_process(COMMAND "${PYTHON_EXECUTABLE}" -c
+                 "import sys;print 'libpython%d.%d.dylib'%sys.version_info[0:2]"
+                        OUTPUT_VARIABLE PYTHON_LIBRARY_FILE
+                        RESULT_VARIABLE PYTHON_LIBRARY_FILE_RESULT
+                        ERROR_QUIET)
+        string(STRIP ${PYTHON_LIBRARY_FILE} PYTHON_LIBRARY_FILE)
+        if(NOT PYTHON_LIBRARY_FILE_RESULT MATCHES 0)
+            message(SEND_ERROR "Failed to determine PYTHON_LIBRARY")
+        endif(NOT PYTHON_LIBRARY_FILE_RESULT MATCHES 0)
+
+        set(PYTHON_LIBRARY "${PYTHON_LIBRARY_DIR}/${PYTHON_LIBRARY_FILE}")
+
+    else(NOT DEFINED PYTHON_LIBRARY)
+        # Used on MacPorts systems for finding Shiboken and PySide
+        # TODO: When we start requiring minimum CMake version above
+        # 2.8.11, change PATH below to DIRECTORY
+        get_filename_component(PYTHON_LIBRARY_DIR ${PYTHON_LIBRARY} PATH)
+    endif(NOT DEFINED PYTHON_LIBRARY)
+
+
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
     find_package(PythonInterp REQUIRED)
     IF (NOT DEFINED PYTHON_VERSION_STRING)
         find_package(PythonLibs REQUIRED)
@@ -429,8 +552,9 @@ if(NOT FREECAD_LIBPACK_USE OR FREECAD_LIBPACK_CHECKFILE_CLBUNDLER)
         find_package(PythonLibs ${PYTHON_VERSION_STRING} EXACT)
     ENDIF(NOT DEFINED PYTHON_VERSION_STRING)
 
+
     IF(NOT PYTHONLIBS_FOUND)
-        MESSAGE("Python not found, install python!")
+        MESSAGE(FATAL_ERROR "Python not found, install python!")
     ENDIF(NOT PYTHONLIBS_FOUND)
 
 # -------------------------------- pcl ----------------------------------
@@ -599,6 +723,12 @@ if(NOT FREECAD_LIBPACK_USE OR FREECAD_LIBPACK_CHECKFILE_CLBUNDLER)
         # set(PYTHON_SUFFIX -python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
         SET(PYTHON_SUFFIX -python2.7) # for shiboken
         SET(PYTHON_BASENAME -python2.7) # for PySide
+
+        if(DEFINED MACPORTS_PREFIX)
+            find_package(Shiboken REQUIRED HINTS "${PYTHON_LIBRARY_DIR}/cmake")
+            find_package(PySide REQUIRED HINTS "${PYTHON_LIBRARY_DIR}/cmake")
+        endif(DEFINED MACPORTS_PREFIX)
+
         find_package(Shiboken REQUIRED)
         find_package(PySide REQUIRED)
         find_package(PySideTools REQUIRED) # Pyside utilities (pyside-uic & pyside-rcc)
