Gestures: custom Windows gesture recognizer
Translates native Windows pinch and rotate gestures into Qt's pinch
gestures.

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -897,6 +897,7 @@ SET(FreeCADGui_CPP_SRCS
     Utilities.cpp
     WaitCursor.cpp
     ManualAlignment.cpp
+    WinNativeGestureRecognizers.cpp
 )
 SET(FreeCADGui_SRCS 
     Application.h
@@ -918,6 +919,7 @@ SET(FreeCADGui_SRCS
     Utilities.h
     WaitCursor.h
     ManualAlignment.h
+    WinNativeGestureRecognizers.h
 )
 
 SET(FreeCADGui_SRCS
