FEM: Add "None" and simplify material setting
The "-->choose Material" has been replaced with a not defined material.
That makes setting/retrieving material to/from the object much easier
and allows user to have a "not defined" material. Previously it wasn't
possible to change i.e. form Steel to "not defined".

Signed-off-by: Przemo Firszt <przemo@firszt.eu>

--- a/src/Mod/Material/CMakeLists.txt
+++ b/src/Mod/Material/CMakeLists.txt
@@ -14,6 +14,7 @@ SOURCE_GROUP("Module" FILES ${Material_SRCS})
 #FILE( GLOB MaterialLib_Files ./StandardMaterial/*.FCMat ./StandardMaterial/*.txt  )
 
 SET (MaterialLib_Files
+    StandardMaterial/None.FCMat
     StandardMaterial/ABS.FCMat
     StandardMaterial/CalculiX.FCMat
     StandardMaterial/Concrete.FCMat
